# GDSS_CV_OCR

./: .env.example  README.md  app.py  pyproject.toml
data/: reference_master.csv
docs/: demo_script.md  prompt_playbook.md
hackathon_material/Hackathon Materials/: Dataset Instruction doc.docx
imdb_app/: __init__.py  barcode.py  config.py  costing.py  demo_fixtures.py  evaluator.py  exporter.py  grouping.py  grouping_benchmark.py  model_catalog.py  models.py  normalizer.py  pack_parser.py  pipeline.py  store.py  validators.py  vlm_client.py
scripts/: benchmark_grouping_models.py
tests/: conftest.py  test_app_samples.py  test_barcode.py  test_costing.py  test_demo_fixtures.py  test_evaluator.py  test_exporter.py  test_grouping.py  test_grouping_benchmark.py  test_model_catalog.py  test_normalizer.py  test_pack_parser.py  test_pipeline.py  test_store.py  test_validators.py  test_vlm_client.py
